--- a/Untitled.css
+++ b/Untitled.css
@@ -1,31 +1,84 @@
-@media screen and (max-width: 650px) {
-    .col{
-        width: 100%;
-        margin-top: 0px;
-    }
-    .v1{
-        display: none;
-    } 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 .container{
-    position: relative;
-    left: 200px;
-    top: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+.left{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    width: 500px;
+    height: 100vh;
+}
+.left h1{
+    font-family: "facebook letter faces";
+    color: blue;
+    margin: 0px 50px;
+}
+.l1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0px 50px;
+}
+.right{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 500px;
+    height: 100vh;
+    padding: 10px;
+}
+form{
+    background-color:rgb(247, 234, 184);
+    width: 300px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border-radius: 10px;
+}
+form input{
+    width: 100%;
+    padding: 10px;
+}
+.loginbtn{
+    background-color: rgb(15, 79, 161);
+    color: white;
+    justify-content: center;
+    height: 50px;
+    width: 150px;
+    text-align: center;
+    text-decoration: none;
+    padding: 15px;
     border-radius: 5px;
+    margin: 0px 60px;
 }
-.t1, .t2, .t3{
-    width: 50%;
+.l2{
+    display: none;
 }
-.col{
-    position: relative;
-    right: 30%;
-    top: 200px;
-    background-color: cornsilk;
-    float: right;
-    width: 200px;
-}
-.v1{
-    position: absolute;
-    left: 100px;
-    transform: translate(-50%);
+@media (max-width: 900px){
+    .l2{
+        display: block;
+        justify-content: center;
+        margin: 0px 30px;
+    }
+    .l1{
+        display: none;
+    }
 }
